# PortfolioAnalyzer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
cdk/: cdk.context.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts  constant.ts  stack-creation-info.ts
cdk/lib/enum/: region.ts  stage.ts
cdk/lib/stack/: deployment-stacks.ts  dns.ts  ecs-service.ts  vpc.ts
data/: 20200101-20250123_txns.csv  tst.csv
data/statements/: Margin-20240131.csv  RRSP-20240131.csv  TFSA-20240131.csv  margin-20240612.csv  rrsp-20240612.csv  tfsa-20240612.csv
src/: Dockerfile  access_token.yml  main.py  pyproject.toml
src/lib/: model.py
src/lib/constant/: constant.py
src/lib/dash/: dash.py
src/lib/ingestion/: ingest_baseline.py  ingest_transaction.py  load_baseline_holdings_csvs.py
src/lib/logger/: logger.py
src/lib/metric_processor/: base.py  capital_gain.py  dividend.py  processor.py
src/lib/model/: account_ids.py  position.py
src/lib/model/enum/: account_category.py  account_name.py  action.py  stage.py
src/lib/questrade/: questrade.py
src/tests/lib/metric_processor/: test_capital_gain.py  test_dividend.py
src/tests/lib/questrade/: test_questrade.py
